[gd_scene load_steps=34 format=3 uid="uid://bj0ryq6rypupy"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_xhvad"]
[ext_resource type="Theme" uid="uid://cujec1iqo8wh0" path="res://resources/main_theme.tres" id="2_wbcts"]
[ext_resource type="Texture2D" uid="uid://b8ukh6sdpnnhy" path="res://assets/textures/background/bg.png" id="3_qyhbf"]
[ext_resource type="Texture2D" uid="uid://8leiqbwdukse" path="res://assets/textures/player/Astronaut-Sheet.png" id="4_8car7"]
[ext_resource type="Texture2D" uid="uid://dkt57fe845ypv" path="res://assets/textures/ui/WASD.png" id="4_olnq8"]
[ext_resource type="FontFile" uid="uid://cvqh6bdrrj53t" path="res://assets/fonts/retro_gaming.ttf" id="5_4al5w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q11ix"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e7agw"]
atlas = ExtResource("4_8car7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhof7"]
atlas = ExtResource("4_8car7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p8hr"]
atlas = ExtResource("4_8car7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r01p3"]
atlas = ExtResource("4_8car7")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8rgx"]
atlas = ExtResource("4_8car7")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh4qv"]
atlas = ExtResource("4_8car7")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8mnx"]
atlas = ExtResource("4_8car7")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_konu0"]
atlas = ExtResource("4_8car7")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gc2tg"]
atlas = ExtResource("4_8car7")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7ip7"]
atlas = ExtResource("4_8car7")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux0yy"]
atlas = ExtResource("4_8car7")
region = Rect2(96, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2lej"]
atlas = ExtResource("4_8car7")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qopo"]
atlas = ExtResource("4_8car7")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_db0n3"]
atlas = ExtResource("4_8car7")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_77xsn"]
atlas = ExtResource("4_8car7")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvbiy"]
atlas = ExtResource("4_8car7")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkay5"]
atlas = ExtResource("4_8car7")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_soda4"]
atlas = ExtResource("4_8car7")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dldfk"]
atlas = ExtResource("4_8car7")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1512"]
atlas = ExtResource("4_8car7")
region = Rect2(128, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx2at"]
atlas = ExtResource("4_8car7")
region = Rect2(144, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fna13"]
atlas = ExtResource("4_8car7")
region = Rect2(160, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sn31"]
atlas = ExtResource("4_8car7")
region = Rect2(176, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j88cp"]
atlas = ExtResource("4_8car7")
region = Rect2(192, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5qow"]
atlas = ExtResource("4_8car7")
region = Rect2(208, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_30c8x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7agw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhof7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p8hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r01p3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8rgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh4qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8mnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_konu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gc2tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7ip7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux0yy")
}],
"loop": true,
"name": &"interaction",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2lej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qopo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db0n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77xsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvbiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkay5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soda4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dldfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1512")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx2at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fna13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sn31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j88cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5qow")
}],
"loop": true,
"name": &"walk",
"speed": 20.0
}]

[node name="how_to_play" type="Node2D"]
script = ExtResource("1_xhvad")

[node name="ScrollBG" type="HBoxContainer" parent="."]
offset_right = 3840.0
offset_bottom = 1080.0
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="ScrollBG"]
layout_mode = 2
texture = ExtResource("3_qyhbf")

[node name="Midpoint" type="Control" parent="ScrollBG"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="ScrollBG"]
layout_mode = 2
texture = ExtResource("3_qyhbf")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1152.0
offset_bottom = 646.0
theme = ExtResource("2_wbcts")
theme_override_styles/panel = SubResource("StyleBoxEmpty_q11ix")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "How to Play"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Controls" type="VBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Heading" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Controls"]
layout_mode = 2
text = "Controls"
horizontal_alignment = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Controls"]
layout_mode = 2

[node name="WASD" type="TextureRect" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Controls/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("4_olnq8")

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Controls"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "- Use WASD to move around. 
- Press ENTER or E to advance dialogue.
- Some puzzles require using the mouse and typing.
"
fit_content = true
autowrap_mode = 2

[node name="Interaction" type="VBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Heading" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Interaction"]
layout_mode = 2
text = "Interaction"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Interaction"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="Player" type="TextureRect" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Interaction/CenterContainer"]
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Interaction/CenterContainer/Player"]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_30c8x")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.055835

[node name="Indicator" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Interaction/CenterContainer/Player"]
layout_mode = 0
offset_left = 26.0
offset_top = -39.0
offset_right = 51.0
offset_bottom = 5.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_4al5w")
text = "?"

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/Interaction"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "- When exploring the level, you may find interactable objects. 
- When the indicator appears, press E to interact with them.
- Press H to view the helpbook."
fit_content = true

[node name="Control" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Start" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/Control"]
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Control/Start" to="." method="_on_start_pressed"]
