[gd_scene load_steps=7 format=3 uid="uid://ffyof8wge6rn"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_lnxqj"]
[ext_resource type="Theme" uid="uid://cujec1iqo8wh0" path="res://resources/main_theme.tres" id="2_nlyas"]
[ext_resource type="Texture2D" uid="uid://b8ukh6sdpnnhy" path="res://assets/textures/background/bg.png" id="3_jkhtd"]
[ext_resource type="AudioStream" uid="uid://2n1jfn7n83sl" path="res://assets/sounds/sfx/openMenu.wav" id="4_mtpje"]
[ext_resource type="AudioStream" uid="uid://crmt6obpymoo4" path="res://assets/sounds/bgm/ObservingTheStar.ogg" id="5_melxn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tgk2g"]

[node name="title_screen" type="Node2D"]
script = ExtResource("1_lnxqj")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_melxn")

[node name="ScrollBG" type="HBoxContainer" parent="."]
offset_right = 3840.0
offset_bottom = 1080.0
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="ScrollBG"]
layout_mode = 2
texture = ExtResource("3_jkhtd")

[node name="TextureRect2" type="TextureRect" parent="ScrollBG"]
layout_mode = 2
texture = ExtResource("3_jkhtd")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1152.0
offset_bottom = 646.0
theme = ExtResource("2_nlyas")
theme_override_styles/panel = SubResource("StyleBoxEmpty_tgk2g")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Space Escape: 
AI Lockdown"
horizontal_alignment = 1

[node name="HowToPlay" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Sound" type="AudioStreamPlayer" parent="PanelContainer/CenterContainer/VBoxContainer/HowToPlay"]
stream = ExtResource("4_mtpje")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("2_nlyas")
theme_override_font_sizes/font_size = 20
text = "v0.2.3-alpha"

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HowToPlay" to="." method="_on_how_to_play_pressed"]
